[gd_scene load_steps=3 format=3 uid="uid://c3osvi8d83tro"]

[ext_resource type="Script" uid="uid://bf4hbo7sj5v43" path="res://item.gd" id="1_4gq7n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s8enn"]
radius = 7.0

[node name="Item" type="Area2D"]
script = ExtResource("1_4gq7n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_s8enn")
disabled = true

[node name="CollectTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="CollectTimer" to="." method="_on_collect_timer_timeout"]
